# ARCfs

./: .gitignore  LICENSE  Readme.md  arc.py  pyproject.toml  setup.py
src/gitlab_arc_fs/: arc_fs.py  gitlab_filestream.py  lfs_file.py  opener.py  utils.py
tests/: test_arcfs.py
tests/vcr_cassettes/: test_basic  test_exists  test_getmeta  test_getsize  test_getsyspath  test_geturl  test_geturl_purpose  test_isfile  test_islink  test_listdir  test_root_dir
