[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab_arc_fs"
version = "0.0.25.dev1"
description = "An experimental and GitLab filesystem extension for PyFilesystem2.!"
readme = "Readme.md"
requires-python = ">=3.8"
license = { text = "GPLv3" }
authors = [
  { name = "Julian Weidhase", email = "julian.weidhase@rz.uni-freiburg.de" }
]
dependencies = [
  "fs>=2.4.16",
  "urllib3>=1.26.13",
  "requests>=2.28.1",
  "aiohttp>=3.8.3"
]

[project.urls]
Homepage = "https://github.com/nfdi4plants/ARCfs"

[project.entry-points."fs.opener"]
arcfs = "gitlab_arc_fs.opener:ARCfsOpener"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
